package se.jensen.johan.webapp.model;

public enum AgeCategory {
    PUPPY, KITTY, ADULT, SENIOR
}
